--- a/man/paru.8
+++ b/man/paru.8
@@ -36,7 +36,7 @@ Linux repositories.
 
 .TP
 .B \-U, \-\-upgrade
-When ran without targets, like makepkg, builds a PKGBUILD in the current directory.
+When run without targets, like makepkg, builds a PKGBUILD in the current directory.
 
 
 .TP
