--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -302,7 +302,7 @@ Command to use for paging
 .B PreBuildCommand = Command
 Command will be executed for each package before it is build.
 
-The command will be ran via 'sh -c' and the command's current directory will be
+The command will be run via 'sh -c' and the command's current directory will be
 set to the directory containing the package's PKGBUILD. If a package is already
 built then the build will be skipped but this command will still be run for
 that package.
