update man pages to document more config options

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -182,6 +182,10 @@ to never be refreshed. Defaults to 7.
 The pacman config file to use.
 
 .TP
+.B MakepkgConf = path/to/makepkg.conf
+The makepkg config file to use.
+
+.TP
 .B DevelSuffixes = Suffixes...
 Suffixes that paru will use to decide if a package is a devel package.
 Used when determining if a pkgver bump is used when the --needed option is
