--- a/man/paru.8
+++ b/man/paru.8
@@ -251,6 +251,11 @@ The command to use for \fBmakepkg\fR calls. This can be a command in
 \fBPATH\fR or an absolute path to the file.
 
 .TP
+.B \-\-makepkgconf <file>
+Specifies a \fBmakepkg.conf\fR file to use in the chroot enviorment. The file
+can only be an absolute path to the file.
+
+.TP
 .B \-\-pacman <command>
 The command to use for \fBpacman\fR calls. This can be a command in
 \fBPATH\fR or an absolute path to the file.
