--- a/man/paru.8
+++ b/man/paru.8
@@ -287,7 +287,7 @@ separated list that is quoted by the shell.
 .TP
 .B \-\-fm <command>
 This enables fm review mode, where PKGBUILD review is done using the file
-manager specified by command.
+manager specified by command. This allows for hotediting builds.
 
 .TP
 .B \-\-fmflags <flags>
