Implement flag to download AUR packages via SSH
Implement a new `-s` or `--ssh` flag to download AUR packages using
SSH.

Fixes #399

--- a/man/paru.8
+++ b/man/paru.8
@@ -195,6 +195,10 @@ Prints the PKGBUILD to the terminal instead of downloading it.
 .B \-c, \-\-comments
 Print the AUR comments from the PKGBUILD's AUR page.
 
+.TP
+.B \-s, \-\-ssh
+Clone the AUR package using SSH (e.g.: a read-write remote).
+
 .SH REPOCTL OPTIONS (APPLY TO \-L AND \-\-REPOCTL)
 .TP
 .B \-l, \-\-list
