--- a/man/paru.8
+++ b/man/paru.8
@@ -289,6 +289,9 @@ separated list that is quoted by the shell.
 This enables fm review mode, where PKGBUILD review is done using the file
 manager specified by command.
 
+This allows the PKGBUILDs and related files to be edited. Changes won't
+persist unless commited.
+
 .TP
 .B \-\-fmflags <flags>
 Passes arguments to file manager. These flags get passed to every instance where
