Rename -C --upgrade to --sysupgrade and -Lu to -Ly

--- a/man/paru.8
+++ b/man/paru.8
@@ -206,6 +206,10 @@ Remove a package from the local repo.
 Pass this twice to also uninstall the package.
 
 .TP
+.B \-y, \-\-refresh
+Refresh local repos.
+
+.TP
 .B \-q, \-\-quiet
 Show less information.
 
@@ -215,7 +219,7 @@ Show less information.
 Install a package into the chroot.
 
 .TP
-.B \-u, \-\-upgrade
+.B \-u, \-\-sysupgrade
 Upgrade the chroot.
 
 .SH UPGRADE OPTIONS (APPLY TO \-U AND \-\-UPGRADE)
