Renamed option to KeepRepoCache

--- a/man/paru.8
+++ b/man/paru.8
@@ -592,12 +592,12 @@ Sign packages with gpg. Optionally indicate which key to sign with.
 Don't sign package with gpg.
 
 .TP
-.B \-\-keepold [= key]
+.B \-\-keeprepocache [= key]
 Normally upon AUR packages getting updated the old versions will be removed from the local repo.
 This option disables that behavior, keeping the both all versions and only updating the DB.
 
 .TP
-.B \-\-nokeepold
+.B \-\-nokeeprepocache
 Don't keep old packages.
 
 .TP
