--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2022-02-19 14:10+0000\n"
-"PO-Revision-Date: 2021-12-04 23:01-0300\n"
+"PO-Revision-Date: 2022-02-19 11:15-0300\n"
 "Last-Translator: João Vitor S. Anjos\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 "X-Poedit-Bookmarks: -1,110,-1,-1,-1,-1,-1,-1,-1,-1\n"
 
 #: src/clean.rs:32
@@ -796,9 +796,8 @@ msgid "packages failed to build: {}"
 msgstr "os pacotes {} falharam na compilação"
 
 #: src/install.rs:731
-#, fuzzy
 msgid "could not find .SRCINFO for '{}'"
-msgstr "não foi possível encontrar .SRINFO para '{}'"
+msgstr "não foi possível encontrar .SRCINFO para '{}'"
 
 #: src/install.rs:799
 msgid "failed to read dir: {}"
@@ -1084,9 +1083,8 @@ msgid "can not use chroot builds: devtools is not installed"
 msgstr "não é possível compilar em chroot: devtools não está instalado"
 
 #: src/lib.rs:241
-#, fuzzy
 msgid "no operation specified (use -h for help)"
-msgstr "nenhum alvo especificado (use -h para ajuda)"
+msgstr "nenhuma operação especificada (use -h para ajuda)"
 
 #: src/lib.rs:410
 msgid " [installed: {}]"
