--- a/man/paru.8
+++ b/man/paru.8
@@ -592,6 +592,15 @@ Sign packages with gpg. Optionally indicate which key to sign with.
 Don't sign package with gpg.
 
 .TP
+.B \-\-keeprepocache
+Normally upon AUR packages getting updated the old versions will be removed from the local repo.
+This option disables that behavior, keeping the both all versions and only updating the DB.
+
+.TP
+.B \-\-nokeeprepocache
+Don't keep old packages.
+
+.TP
 .B \-\-signdb [= key]
 Sign databases with gpg. Optionally indicate which key to sign with.
 
