--- a/po/hr.po
+++ b/po/hr.po
@@ -19,11 +19,11 @@ msgstr ""
 
 #: src/clean.rs:31
 msgid "Do you want to remove ALL AUR packages from cache?"
-msgstr "Izbrisati SVE AUR pakete iz cache memorije?"
+msgstr "Brisanje SVIH AUR paketa iz cache memorije?"
 
 #: src/clean.rs:33
 msgid "Do you want to remove all other AUR packages from cache?"
-msgstr "Izbrisati sve ostale AUR pakete iz cache memorije?"
+msgstr "Brisanje svih ostalih AUR paketa iz cache memorije?"
 
 #: src/clean.rs:40
 msgid "Clone Directory: {}"
@@ -37,7 +37,7 @@ msgstr "\n"
 
 #: src/clean.rs:48
 msgid "Do you want to remove all saved diffs?"
-msgstr "Izbrisati sve spremljene diffs?"
+msgstr "Brisanje svih spremljenih diffs?"
 
 #: src/clean.rs:64
 msgid "can't open diff dir: {}"
