--- a/man/paru.8
+++ b/man/paru.8
@@ -528,6 +528,14 @@ By default Paru will continue and try to build other AUR packages.
 Don't exit as soon as any AUR packages fail to build.
 
 .TP
+.B \-\-keepsrc
+Keep src/ and pkg/ directories after building packages.
+
+.TP
+.B \-\-nokeepsrc
+Don't keep src/ and pkg/ directories after building packages.
+
+.TP
 .B \-\-combinedupgrade
 During sysupgrade, paru will first perform a refresh, then show
 its combined menu of repo and AUR packages that will be upgraded. Then after
