--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -125,6 +125,10 @@ Exit as soon as any AUR packages fail to build.
 By default Paru will continue and try to build other AUR packages.
 
 .TP
+.B KeepSrc
+Keep src/ and pkg/ directories after building packages.
+
+.TP
 .B Redownload [= all]
 Always download PKGBUILDs of targets even when a copy is available in cache. If
 set to all then this applies to all packages, not only targets.
