--- a/man/paru.8
+++ b/man/paru.8
@@ -204,6 +204,9 @@ Clone the AUR package using SSH (e.g.: a read-write remote).
 .B \-l, \-\-list
 List packages in local repos
 
+.B \-c, \-\-clean
+Remove packages that are not currently installed from repos.
+
 .TP
 .B \-d, \-\-delete
 Remove a package from the local repo.
