--- a/po/es.po
+++ b/po/es.po
@@ -944,8 +944,8 @@ msgid "{}-{} is up to date -- skipping install"
 msgstr "{}-{} está actualizado -- saltando instalación"
 
 #: src/keys.rs:48
-msgid "keys need to be imported:)"
-msgstr "se necesitan importar claves :)"
+msgid "keys need to be imported:"
+msgstr "se necesitan importar claves :"
 
 #: src/keys.rs:53
 msgid "     {key} wanted by: {base}"
