--- a/po/fr.po
+++ b/po/fr.po
@@ -932,8 +932,8 @@ msgid "{}-{} is up to date -- skipping install"
 msgstr "{}-{} est à jour -- installation ignorée"
 
 #: src/keys.rs:48
-msgid "keys need to be imported:)"
-msgstr "les clés doivent être importés :)"
+msgid "keys need to be imported:"
+msgstr "les clés doivent être importés :"
 
 #: src/keys.rs:53
 msgid "     {key} wanted by: {base}"
