--- a/po/ko.po
+++ b/po/ko.po
@@ -905,8 +905,8 @@ msgid "{}-{} is up to date -- skipping install"
 msgstr "{}-{} 현재 최신버전입 -- 설치 건너뛰는 중"
 
 #: src/keys.rs:48
-msgid "keys need to be imported:)"
-msgstr "키를 불러와야 합니다:)"
+msgid "keys need to be imported:"
+msgstr "키를 불러와야 합니다:"
 
 #: src/keys.rs:53
 msgid "     {key} wanted by: {base}"
