--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -988,8 +988,8 @@ msgid "{}-{} is up to date -- skipping install"
 msgstr "{}-{} está atualizado -- pulando instalação"
 
 #: src/keys.rs:48
-msgid "keys need to be imported:)"
-msgstr "chaves precisam ser importadas:)"
+msgid "keys need to be imported:"
+msgstr "chaves precisam ser importadas:"
 
 #: src/keys.rs:53
 msgid "     {key} wanted by: {base}"
