--- a/po/pt.po
+++ b/po/pt.po
@@ -939,8 +939,8 @@ msgid "{}-{} is up to date -- skipping install"
 msgstr "{}-{} está atualizado -- a ignorar instalação"
 
 #: src/keys.rs:48
-msgid "keys need to be imported:)"
-msgstr "chaves precisam ser importadas:)"
+msgid "keys need to be imported:"
+msgstr "chaves precisam ser importadas:"
 
 #: src/keys.rs:53
 msgid "     {key} wanted by: {base}"
