Remove the outdated description of AurUrl
Ditto.

--- a/man/paru.8
+++ b/man/paru.8
@@ -249,8 +249,7 @@ Note that dependency resolution will still include repository packages.
 
 .TP
 .B \-\-aururl
-Set an alternative AUR URL. This is mostly useful for users in China who wish
-to use https://aur.tuna.tsinghua.edu.cn/.
+Set an alternative AUR URL.
 
 .TP
 .B \-\-clonedir <dir>
